# Fancier

./: .gitignore  README.md
fancier-android-module/: PUBLISHING.md  build.gradle  settings.gradle
fancier-android-module/app/: build.gradle
fancier-android-module/app/src/main/: AndroidManifest.xml
fancier-android-module/app/src/main/cpp/: CMakeLists.txt  module_test_app.cpp
fancier-android-module/app/src/main/java/es/ull/pcg/hpc/fancier/module_test_app/: MainActivity.java
fancier-android-module/app/src/main/res/values/: strings.xml  themes.xml
fancier-android-module/app/src/main/res/values-night/: themes.xml
fancier-android-module/fancier/: build.gradle
fancier-android-module/fancier/src/: CMakeLists.txt
fancier-android-module/fancier/src/main/: AndroidManifest.xml
fancier-android-module/gradle/wrapper/: gradle-wrapper.properties
java/project/core/src/main/java/es/ull/pcg/hpc/fancier/array/: ByteArray.java  DoubleArray.java  FloatArray.java  IntArray.java  LongArray.java  ShortArray.java
native/core/include/fancier/: array.h
native/core/src/: array.c
